--- a/Wildcat.Http/Wildcat.Http.csproj
+++ b/Wildcat.Http/Wildcat.Http.csproj
@@ -34,25 +34,55 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="compiler">
+      <HintPath>..\lib\compiler.dll</HintPath>
+    </Reference>
+    <Reference Include="Fleck">
+      <HintPath>..\packages\Fleck.0.9.6.12\lib\net40\Fleck.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Core">
+      <HintPath>..\lib\IKVM.OpenJDK.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Text">
+      <HintPath>..\lib\IKVM.OpenJDK.Text.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Util">
+      <HintPath>..\lib\IKVM.OpenJDK.Util.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.Runtime">
+      <HintPath>..\lib\IKVM.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="SoyToJsSrcCompiler">
+      <HintPath>..\lib\SoyToJsSrcCompiler.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Client.cs" />
+    <Compile Include="Core\Sys.cs" />
+    <Compile Include="HttpClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="HttpServer.cs" />
+    <Compile Include="WSServer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Client\Photo\Block.Event.coffee" />
+    <None Include="Client\Photo\Block.Events.coffee" />
+    <None Include="Client\Photo\Block.Home.coffee" />
     <None Include="Client\Photo\Block\Home.coffee">
       <Compile>True</Compile>
       <Minify>True</Minify>
       <Bare>False</Bare>
       <Iced>False</Iced>
     </None>
+    <None Include="Client\Photo\View.Event.soy" />
     <None Include="Client\Wildcat.coffee">
       <Compile>True</Compile>
       <Minify>True</Minify>
@@ -77,9 +107,31 @@
       <Bare>False</Bare>
       <Iced>False</Iced>
     </None>
+    <None Include="Client\Wildcat\Log.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
+    <None Include="Client\Wildcat\Net.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Client\jquery-1.7.2.js" />
+    <Content Include="Client\Photo\Block.Event.js">
+      <DependentUpon>Block.Event.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Photo\Block.Events.js">
+      <DependentUpon>Block.Events.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Photo\Block.Home.js">
+      <DependentUpon>Block.Home.coffee</DependentUpon>
+    </Content>
     <Content Include="Client\Photo\Block\Home.js">
       <DependentUpon>Home.coffee</DependentUpon>
     </Content>
@@ -96,10 +148,22 @@
     <Content Include="Client\Wildcat\Layout.js">
       <DependentUpon>Layout.coffee</DependentUpon>
     </Content>
+    <Content Include="Client\Wildcat\Log.js">
+      <DependentUpon>Log.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Wildcat\Net.js">
+      <DependentUpon>Net.coffee</DependentUpon>
+    </Content>
     <Content Include="index.htm" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Client\Photo\Model\Collection\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wildcat.DB\Wildcat.DB.csproj">
+      <Project>{EF7A08D4-8640-4D69-AE78-C7D048D45706}</Project>
+      <Name>Wildcat.DB</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
