--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Wildcat.DB\packages.config" />
   <repository path="..\Wildcat.Http\packages.config" />
+  <repository path="..\Wildcat.Music\packages.config" />
 </repositories>
