--- a/Wildcat.DB/packages.config
+++ b/Wildcat.DB/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="mongocsharpdriver" version="1.5" targetFramework="net40" />
   <package id="MongoRepository" version="1.3.2" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.7" targetFramework="net40" />
 </packages>
