--- a/Wildcat.Http/App.config
+++ b/Wildcat.Http/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+
+  <connectionStrings>
+    <add name="MongoDB" connectionString="server=127.0.0.1;database=wcmusic" />
+  </connectionStrings>
   <appSettings>
     <add key="ip" value="46.61.183.13"/>
     <add key="port" value="8080"/>
@@ -7,4 +14,27 @@
 
     <add key="enable closure compiler" value="false"/>
   </appSettings>
+
+  
+  <log4net debug="true">
+    <appender name="ERRORFileAppender" type="log4net.Appender.RollingFileAppender">
+          <lockingmodel type="log4net.Appender.FileAppender+MinimalLock"/>
+          <file value="Logs\all.log" />
+          <appendtofile value="true" />
+          <rollingstyle value="Size" />
+          <maxsizerollbackups value="10" />
+          <maximumfilesize value="200MB" />
+          <staticlogfilename value="true" />
+
+      <layout type="log4net.Layout.PatternLayout">
+
+        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
+      </layout>
+    </appender>
+    <root>
+          <level value="INFO" />
+          <appender-ref ref="ERRORFileAppender" />
+          
+    </root>
+  </log4net>
 </configuration>
