--- a/Wildcat.Http/Wildcat.Http.csproj
+++ b/Wildcat.Http/Wildcat.Http.csproj
@@ -15,7 +15,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -52,6 +52,9 @@
     <Reference Include="IKVM.Runtime">
       <HintPath>..\lib\IKVM.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.0\lib\net40-client\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.5.7\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -62,7 +65,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Client.cs" />
+    <Compile Include="Core\SysConsole.cs" />
     <Compile Include="Core\Layout.cs" />
+    <Compile Include="Core\Logger.cs" />
     <Compile Include="Core\Sys.cs" />
     <Compile Include="HttpClient.cs" />
     <Compile Include="Program.cs" />
@@ -74,21 +79,54 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Client\Music\Block\Albums.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
     <None Include="Client\Music\Block\Artist.coffee">
       <Compile>True</Compile>
       <Minify>True</Minify>
       <Bare>False</Bare>
       <Iced>False</Iced>
     </None>
-    <None Include="Client\Photo\Block.Event.coffee" />
-    <None Include="Client\Photo\Block.Events.coffee" />
-    <None Include="Client\Photo\Block.Home.coffee" />
-    <None Include="Client\Photo\Block\Home.coffee">
+    <None Include="Client\Music\Block\Artists.coffee">
       <Compile>True</Compile>
       <Minify>True</Minify>
       <Bare>False</Bare>
       <Iced>False</Iced>
     </None>
+    <None Include="Client\Music\Model\Artist.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
+    <None Include="Client\Music\View\Albums.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
+    <None Include="Client\Music\View\Artist.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
+    <None Include="Client\Music\View\Layout.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
+    <None Include="Client\Music\View\T\Albums.soy" />
+    <None Include="Client\Music\View\T\Artist.soy" />
+    <None Include="Client\Music\View\T\Layout.soy" />
+    <None Include="Client\Photo\Block.Event.coffee" />
+    <None Include="Client\Photo\Block.Events.coffee" />
+    <None Include="Client\Photo\Block.Home.coffee" />
     <None Include="Client\Photo\View.Event.soy" />
     <None Include="Client\Wildcat.coffee">
       <Compile>True</Compile>
@@ -97,6 +135,12 @@
       <Iced>False</Iced>
     </None>
     <None Include="Client\Wildcat\Block.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
+    <None Include="Client\Wildcat\BlockList.coffee">
       <Compile>True</Compile>
       <Minify>True</Minify>
       <Bare>False</Bare>
@@ -120,7 +164,25 @@
       <Bare>False</Bare>
       <Iced>False</Iced>
     </None>
+    <None Include="Client\Wildcat\Model.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
     <None Include="Client\Wildcat\Net.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
+    <None Include="Client\Wildcat\View.coffee">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <Bare>False</Bare>
+      <Iced>False</Iced>
+    </None>
+    <None Include="Client\Wildcat\ViewList.coffee">
       <Compile>True</Compile>
       <Minify>True</Minify>
       <Bare>False</Bare>
@@ -129,8 +191,29 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Client\jquery-1.7.2.js" />
+    <Content Include="Client\Music\Block\Artists.js">
+      <DependentUpon>Artists.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Music\View\Albums.js">
+      <DependentUpon>Albums.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Music\View\Layout.js">
+      <DependentUpon>Layout.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Wildcat\BlockList.js">
+      <DependentUpon>BlockList.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Wildcat\Lib\jquery-1.7.2.js" />
+    <Content Include="Client\Music\Block\Albums.js">
+      <DependentUpon>Albums.coffee</DependentUpon>
+    </Content>
     <Content Include="Client\Music\Block\Artist.js">
+      <DependentUpon>Artist.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Music\Model\Artist.js">
+      <DependentUpon>Artist.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Music\View\Artist.js">
       <DependentUpon>Artist.coffee</DependentUpon>
     </Content>
     <Content Include="Client\Photo\Block.Event.js">
@@ -142,10 +225,6 @@
     <Content Include="Client\Photo\Block.Home.js">
       <DependentUpon>Block.Home.coffee</DependentUpon>
     </Content>
-    <Content Include="Client\Photo\Block\Home.js">
-      <DependentUpon>Home.coffee</DependentUpon>
-    </Content>
-    <Content Include="Client\require.js" />
     <Content Include="Client\Wildcat.js">
       <DependentUpon>Wildcat.coffee</DependentUpon>
     </Content>
@@ -158,15 +237,29 @@
     <Content Include="Client\Wildcat\Layout.js">
       <DependentUpon>Layout.coffee</DependentUpon>
     </Content>
+    <Content Include="Client\Wildcat\Lib\soyutils.js" />
     <Content Include="Client\Wildcat\Log.js">
       <DependentUpon>Log.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Wildcat\Model.js">
+      <DependentUpon>Model.coffee</DependentUpon>
     </Content>
     <Content Include="Client\Wildcat\Net.js">
       <DependentUpon>Net.coffee</DependentUpon>
     </Content>
+    <Content Include="Client\Wildcat\View.js">
+      <DependentUpon>View.coffee</DependentUpon>
+    </Content>
+    <Content Include="Client\Wildcat\ViewList.js">
+      <DependentUpon>ViewList.coffee</DependentUpon>
+    </Content>
     <Content Include="index.html" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Client\Music\Lib\" />
+    <Folder Include="Client\Music\Model\Collection\" />
+    <Folder Include="Client\Music\Style\" />
+    <Folder Include="Client\Photo\Block\" />
     <Folder Include="Client\Photo\Model\Collection\" />
   </ItemGroup>
   <ItemGroup>
