--- a/Wildcat.Http/packages.config
+++ b/Wildcat.Http/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fleck" version="0.9.6.12" targetFramework="net40-Client" />
+  <package id="log4net" version="2.0.0" targetFramework="net40-Client" />
   <package id="Newtonsoft.Json" version="4.5.7" targetFramework="net40-Client" />
 </packages>
