--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Wildcat.Builder\packages.config" />
   <repository path="..\Wildcat.DB\packages.config" />
   <repository path="..\Wildcat.Http\packages.config" />
   <repository path="..\Wildcat.Music\packages.config" />
